--- a/app/portainer/views/home/home.html
+++ b/app/portainer/views/home/home.html
@@ -17,7 +17,7 @@
 <information-panel ng-if="!isAdmin && endpoints.length === 0" title-text="Information">
   <span class="small text-muted">
     <p>
-      <i class="fa fa-exclamation-circle orange-icon" aria-hidden="true" style="margin-right: 2px;"></i>
+      <i class="fa fa-exclamation-circle orange-icon" aria-hidden="true" style="margin-right: 2px"></i>
       You do not have access to any environment. Please contact your administrator.
     </p>
   </span>
@@ -25,17 +25,17 @@
 
 <div
   class="row"
-  style="width: 100%; height: 100%; text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;"
+  style="width: 100%; height: 100%; text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center"
   ng-if="state.connectingToEdgeEndpoint"
 >
   Connecting to the Edge environment...
-  <i class="fa fa-cog fa-spin" style="margin-left: 5px;"></i>
+  <i class="fa fa-cog fa-spin" style="margin-left: 5px"></i>
 </div>
 
 <information-panel ng-if="isAdmin && endpoints.length === 0" title-text="Information">
   <span class="small text-muted">
     <p>
-      <i class="fa fa-exclamation-circle orange-icon" aria-hidden="true" style="margin-right: 2px;"></i>
+      <i class="fa fa-exclamation-circle orange-icon" aria-hidden="true" style="margin-right: 2px"></i>
       No environment available for management. Please head over the
       <a ui-sref="portainer.endpoints.new"> environments view </a>
       to add an environment.
@@ -45,18 +45,6 @@
 
 <div class="row" ng-if="!state.connectingToEdgeEndpoint">
   <div class="col-sm-12">
-    <endpoint-list
-      title-text="Environments"
-      title-icon="fa-plug"
-      table-key="home_endpoints"
-      tags="tags"
-      dashboard-action="goToDashboard"
-      show-snapshot-action="isAdmin"
-      snapshot-action="triggerSnapshot"
-      edit-action="goToEdit"
-      is-admin="isAdmin"
-      retrieve-page="getPaginatedEndpoints"
-      endpoint-init-time="state.homepageLoadTime"
-    ></endpoint-list>
+    <environment-list tags="tags" on-click-item="(goToDashboard)" on-refresh="(triggerSnapshot)" homepage-load-time="state.homepageLoadTime" groups="groups"></environment-list>
   </div>
 </div>
